--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -10,8 +10,8 @@
     font-size: 90px;
 }
 
-.app__header-img{
-    width: 80%;
+.app__wrapper_img img{
+    padding-top: 80px;
 }
 
 .app__wrapper_info button{
