--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -1,15 +1,19 @@
-.app__header{
-    background-color: #fffbd3;
-    
+.header{
+    justify-content: center;
+    display: flex;
+}
+.titles{
+    padding-top: 80px;
+    margin-bottom: 80px;    
 }
 
 .app__header-h1{
     color: #000;
-    letter-spacing: 0.02em;
     text-transform: uppercase;
-    line-height: 100px;
     font-size: 70px;
-}
+    margin-top: 30px;
+    margin-bottom: 50px;
+    }
 
 .app__wrapper_img img{
     padding-top: 80px;
