--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -4,7 +4,7 @@
 }
 .titles{
     padding-top: 80px;
-    margin-bottom: 80px;    
+    padding-bottom: 50px;
 }
 
 .app__header-h1{
@@ -16,7 +16,9 @@
     }
 
 .app__wrapper_img img{
-    padding-top: 50px;
+    padding-top: 80px;
+    width: 300px;
+    margin-left: 40px;
 }
 
 .app__wrapper_info button{
